Add Redis username support for Redis
- Added redisUsername field to Config struct
- Updated ConnectionPool to support username authentication
- Modified AUTH command to support both username+password and password-only modes
- Updated README with username configuration examples

--- a/.traefik.yml
+++ b/.traefik.yml
@@ -10,6 +10,7 @@ useUnsafe: true
 
 testData:
   redisAddr: "valkey-redis-master.traefik.svc.cluster.local:6379"
+  redisUsername: "default"
   redisPassword: "traefik"
   orgHeader: "X-Org"
   poolSize: 10
